--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.10.0
 Django==5.1.14
 djangorestframework==3.15.2
+gunicorn==23.0.0
+packaging==25.0
+psycopg2-binary==2.9.11
 python-decouple==3.8
 sqlparse==0.5.3
 typing_extensions==4.15.0
