--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-asgiref==3.10.0
 Django==5.1.14
 djangorestframework==3.15.2
-gunicorn==23.0.0
-packaging==25.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
-sqlparse==0.5.3
-typing_extensions==4.15.0
-tzdata==2025.2
+Pillow==12.0.0
+gunicorn==23.0.0
+
+# Opționale, dar recomandate pentru production
+whitenoise==6.7.0
+django-cors-headers==4.5.0
+
+# Development & formatare (opțional în repo, dar util)
+black==24.10.0
+isort==5.13.2
+flake8==7.1.1
