Finalizare multi-restaurant: landing cu listă restaurante, generare plan HTMX, routing stabil, bază de date cu 100+ alimente și fibre

--- a/.gitignore
+++ b/.gitignore
@@ -27,14 +27,17 @@ env_*/
 media/
 staticfiles/
 
-# PyCharm
-.idea/
 
-# VS Code
+# IDE
 .vscode/
+.idea/
+*.sublime-*
 
 # Mac
 .DS_Store
 
 # Windows
 Thumbs.db
+
+# Logs
+*.log
